# model-provenance

./: README.md  pyproject.toml  requirements.txt
data/: sample_provenance.json
src/model_provenance/application/dto/: __init__.py  artifact_dto.py  derivation_dto.py  graph_dto.py  run_dto.py
src/model_provenance/application/services/: __init__.py  filter_graph.py  find_reproduction_inputs.py  get_artifact_details.py  get_artifact_lineage.py  get_checkpoint_branches.py  get_derivation_details.py  get_run_view.py  load_provenance_graph.py  summarize_derivation.py
src/model_provenance/domain/: __init__.py  exceptions.py
src/model_provenance/domain/entities/: __init__.py  artifact.py  checkpoint.py  derivation.py  initialization.py  run.py
src/model_provenance/domain/repositories/: provenance_repository.py
src/model_provenance/domain/services/: lineage_service.py  provenance_service.py  reproduction_service.py
src/model_provenance/domain/value_objects/: __init__.py  execution_record.py  initialization_rule.py  lineage.py  specification.py  training_input.py  training_input_descriptor.py  training_state.py  update_definition.py
src/model_provenance/infrastructure/graph/: graph_projection.py  layout.py
src/model_provenance/infrastructure/repositories/: json_provenance_repository.py
src/model_provenance/infrastructure/serializers/: json_loader.py
src/model_provenance/presentation/streamlit_app/: app.py
tests/application/: test_use_cases.py
tests/domain/: test_entities.py  test_invariants.py
tests/infrastructure/: test_infrastructure.py
(+2 files in other folders)
