[project]
name = "model-provenance"
version = "0.1.0"
description = "Domain model for ML training provenance and artifact lineage"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "streamlit>=1.55.0",
    "streamlit-agraph>=0.0.45",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/model_provenance"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
